Correction bug scrollbar et ajout des groupes dans la navbar

--- a/web/css/vizeat.css
+++ b/web/css/vizeat.css
@@ -38207,7 +38207,7 @@ html {
     position: relative;
     height: 100%;
     min-height: 100%;
-    overflow-y: scroll;
+    overflow-y: -moz-scrollbars-none;
 }
 @media (max-width: 749px)  {
     html {
